minikube/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: clientservice-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: clientservice-app
    template:
       metadata:
          labels:
             app: clientservice-app
       spec:
          containers:
          - name: clientservice
            image: otusarchitectpopov/hw01:clientservice
            ports:
              - containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 120
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 120
              periodSeconds: 5
