minikube/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientservice-service
spec:
  selector:
    app: clientservice-app
  ports:
    - protocol: TCP
      port: 8000
  type: NodePort
